[FIX] make graph container full screen [FIX] text SElection when user push shift down

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  background-color: var(--main-body-bg);
+  background-image: var(--primary-gradiant);
 
   display: flex;
   flex-direction: column;
@@ -7,15 +7,15 @@
   justify-content: center;
 
   height: 100%;
-
+  
   .container {
     background-image: var(--primary-gradiant);
 
     position: relative;
     overflow: hidden;
 
-    width: 100%;
-    height: 100%;
+    width: 99%;
+    height: 99%;
 
   }
 }
